// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chromium / 1`] = `Array []`;

exports[`chromium /api/button/ 1`] = `Array []`;

exports[`chromium /api/select/ 1`] = `Array []`;

exports[`chromium /components/breadcrumbs 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.2/aria-allowed-role?application=axeAPI",
    "id": "aria-allowed-role",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.2/landmark-unique?application=axeAPI",
    "id": "landmark-unique",
    "nodes": Array [
      "#demo-REMOVED_UNSTABLE_USE_ID_VALUE_FROM_SNAPSHOT > .MuiBreadcrumbs-root[aria-label=\\"breadcrumb\\"]",
    ],
  },
]
`;

exports[`chromium /components/button-group/ 1`] = `Array []`;

exports[`chromium /components/buttons/ 1`] = `Array []`;

exports[`chromium /components/checkboxes/ 1`] = `Array []`;

exports[`chromium /components/dialogs/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.2/heading-order?application=axeAPI",
    "id": "heading-order",
    "nodes": Array [
      "h6",
    ],
  },
]
`;

exports[`chromium /components/pagination/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.2/landmark-unique?application=axeAPI",
    "id": "landmark-unique",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER > .MuiPagination-root[aria-label=\\"pagination\\\\ navigation\\"]:nth-child(1)",
    ],
  },
]
`;

exports[`chromium /components/pickers 1`] = `Array []`;

exports[`chromium /components/radio-buttons 1`] = `Array []`;

exports[`chromium /components/rating/ 1`] = `Array []`;

exports[`chromium /components/selects/ 1`] = `Array []`;

exports[`chromium /components/slider 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.2/aria-input-field-name?application=axeAPI",
    "id": "aria-input-field-name",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER[aria-labelledby=\\"range-slider\\"][aria-valuetext=\\"\\\\32 0°C\\"]",
      ".jssREMOVED_UNSTABLE_JSS_COUNTER[aria-labelledby=\\"range-slider\\"][aria-valuetext=\\"\\\\33 7°C\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.2/aria-valid-attr-value?application=axeAPI",
    "id": "aria-valid-attr-value",
    "nodes": Array [
      "span[aria-labelledby=\\"discrete-slider-small-steps\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.2/duplicate-id-aria?application=axeAPI",
    "id": "duplicate-id-aria",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER > .MuiTypography-body1.MuiTypography-gutterBottom:nth-child(1)",
      ".jssREMOVED_UNSTABLE_JSS_COUNTER.markdown-body:nth-child(14) > h2 > .anchor-link",
    ],
  },
]
`;

exports[`chromium /components/switches/ 1`] = `Array []`;

exports[`chromium /components/tabs/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.2/duplicate-id-aria?application=axeAPI",
    "id": "duplicate-id-aria",
    "nodes": Array [
      "div[aria-labelledby=\\"demo-a11y-tabs-automatic-label\\"] > .Mui-selected.MuiTab-textColorInherit[aria-controls=\\"a11y-tabpanel-0\\"]",
      "div[aria-labelledby=\\"demo-a11y-tabs-automatic-label\\"] > .MuiTab-textColorInherit.MuiTab-root[aria-controls=\\"a11y-tabpanel-1\\"]",
      "div[aria-labelledby=\\"demo-a11y-tabs-automatic-label\\"] > .MuiTab-textColorInherit.MuiTab-root[aria-controls=\\"a11y-tabpanel-2\\"]",
    ],
  },
]
`;

exports[`chromium /components/text-fields/ 1`] = `Array []`;

exports[`chromium /components/tooltips/ 1`] = `Array []`;

exports[`chromium /components/transfer-list 1`] = `Array []`;

exports[`chromium /components/tree-view/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.2/aria-required-parent?application=axeAPI",
    "id": "aria-required-parent",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER > .Mui-expanded.MuiTreeItem-root[role=\\"treeitem\\"] > .MuiTreeItem-group.MuiCollapse-container[role=\\"group\\"] > .MuiCollapse-wrapper > .MuiCollapse-wrapperInner > .MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(1)",
      ".jssREMOVED_UNSTABLE_JSS_COUNTER > .Mui-expanded.MuiTreeItem-root[role=\\"treeitem\\"] > .MuiTreeItem-group.MuiCollapse-container[role=\\"group\\"] > .MuiCollapse-wrapper > .MuiCollapse-wrapperInner > .MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(2)",
      ".jssREMOVED_UNSTABLE_JSS_COUNTER > .MuiCollapse-wrapper > .MuiCollapse-wrapperInner > .MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(1)",
      ".jssREMOVED_UNSTABLE_JSS_COUNTER > .MuiCollapse-wrapper > .MuiCollapse-wrapperInner > .MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(2)",
      ".jssREMOVED_UNSTABLE_JSS_COUNTER > .MuiCollapse-wrapper > .MuiCollapse-wrapperInner > .MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(3)",
      ".jssREMOVED_UNSTABLE_JSS_COUNTER > .MuiCollapse-wrapper > .MuiCollapse-wrapperInner > .MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(4)",
      ".MuiCollapse-wrapperInner > .jssREMOVED_UNSTABLE_JSS_COUNTER.MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(1)",
      ".MuiCollapse-wrapperInner > .jssREMOVED_UNSTABLE_JSS_COUNTER.MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(2)",
      ".MuiCollapse-wrapperInner > .jssREMOVED_UNSTABLE_JSS_COUNTER.MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(3)",
      ".MuiCollapse-wrapperInner > .jssREMOVED_UNSTABLE_JSS_COUNTER.MuiTreeItem-root[role=\\"treeitem\\"]:nth-child(4)",
    ],
  },
]
`;
